--- a/style.css
+++ b/style.css
@@ -1,8 +1,20 @@
 body{
-    margin: 20px;
+    margin: 40px;
 }
 
 img{
-    width:10%;
-    border-radius: 4px;
+    width:40%;
+}
+
+.card{
+    display: flex;
+    justify-content: space-around;
+    padding: 20px;
+    text-align: center;
+    width: 400px;
+    margin-left: auto;
+    margin-right: auto;
+}
+.info{
+    border: 1px dotted lightblue;
 }
