--- a/style.css
+++ b/style.css
@@ -9,12 +9,12 @@ img{
 .card{
     display: flex;
     justify-content: space-around;
-    padding: 20px;
+    padding: 40px;
     text-align: center;
     width: 400px;
     margin-left: auto;
     margin-right: auto;
-}
-.info{
-    border: 1px dotted lightblue;
+    background-color: rgb(142, 177, 216);
+    border-bottom: 8px solid dimgrey;
+    color: #2b2839;
 }
