--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body{
     margin: 40px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
 img{
@@ -12,9 +13,9 @@ img{
     padding: 40px;
     text-align: center;
     width: 400px;
-    margin-left: auto;
-    margin-right: auto;
+    margin: auto;
     background-color: rgb(142, 177, 216);
     border-bottom: 8px solid dimgrey;
     color: #2b2839;
+    
 }
